--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,6 @@ body {
     font-family: 'Roboro', sans-serif;
 }
 
-main {
-    border-top: 2px solid black;
-}
 
 @media screen and (min-width: 300px) and (max-width: 600px) {
 
@@ -72,7 +69,7 @@ main {
     }
 
     .jumbo {
-        height: 55vh;
+        height: 50vh;
         background-color: #FAC017;
         display: flex;
         align-items: center;
@@ -114,6 +111,10 @@ main {
     }
 
     .box-content {
+        width: 90%;
+    }
+
+    .box-variable {
         width: 90%;
     }
 
@@ -346,6 +347,7 @@ main {
 
     header {
         background-color: #FAC017;
+        border-bottom: 1px solid black;
     }
 
 
@@ -361,6 +363,7 @@ main {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        background-color: #FAC017;
     }
 
     .header-logo {
@@ -401,7 +404,7 @@ main {
 
     .box-m {
         position: absolute;
-        top: 67px;
+        top: 69px;
         right: 0px;
     }
 
@@ -411,7 +414,6 @@ main {
         display: flex;
         align-items: center;
         justify-content: left;
-        margin-bottom: 40px;
         position: relative;
     }
 
@@ -419,6 +421,7 @@ main {
         font-family: 'Spectral', Arial, Helvetica, sans-serif;
         font-size: 5rem;
         font-weight: 600;
+        margin-bottom: 13px;
     }
 
     .jumbo-element {
@@ -446,6 +449,7 @@ main {
         justify-content: center;
         padding-bottom: 40px;
         padding-top: 40px;
+        border: 1px solid rgb(181, 181, 181);
     }
 
     .box-content {
@@ -456,12 +460,17 @@ main {
         display: flex;
         align-items: center;
         gap: 10px;
+        margin-bottom: 10px;
     }
 
     .trending-title p {
         font-size: 12px;
         font-weight: 500;
         color: gray;
+    }
+
+    .trending-icon {
+        padding-left: 6px;
     }
 
     .card-list {
@@ -474,6 +483,7 @@ main {
     .card {
         display: flex;
         width: 32.5%;
+        margin-bottom: 10px;
     }
 
     .card-body {
@@ -482,7 +492,7 @@ main {
         flex-direction: column;
         gap: 8px;
         padding-top: 2px;
-        padding-left: 4px;
+        padding-left: 10px;
 
     }
 
@@ -566,6 +576,7 @@ main {
 
     .secondary-nav {
         width: 100%;
+        margin-top: 20px;
     }
 
     .secondary-nav ul {
@@ -627,7 +638,6 @@ main {
     .post-date {
         display: flex;
         align-items: center;
-        width: 44%;
         gap: 6px;
     }
 
@@ -636,6 +646,7 @@ main {
         align-items: center;
         justify-content: space-between;
         font-size: 11px;
+        margin-left: 3px;
     }
 
     .post-title h3 {
